// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Direksi FulfillmentDashboard (snapshot) > renders empty state (no FG / no shipments) and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Fulfillment
           
          <span
            class="text-status-action"
          >
            Hub
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          Finished Goods Distribution & Retention Trigger
        </p>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                FG Inventory
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-package"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                  />
                  <path
                    d="M12 22V12"
                  />
                  <polyline
                    points="3.29 7 12 12 20.71 7"
                  />
                  <path
                    d="m7.5 4.27 9 5.15"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending Shipments
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-truck"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                  />
                  <path
                    d="M15 18H9"
                  />
                  <path
                    d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                  />
                  <circle
                    cx="17"
                    cy="18"
                    r="2"
                  />
                  <circle
                    cx="7"
                    cy="18"
                    r="2"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Delivered Today
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-8"
      >
        <div
          class="rounded-2xl border text-slate-900 shadow-sm lg:col-span-1 border-gray-200 bg-white h-fit"
        >
          <div
            class="flex flex-col space-y-1.5 p-5 border-b border-slate-100 text-left"
          >
            <h3
              class="text-sm font-black text-gray-600 uppercase tracking-[0.2em] flex items-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-boxes mr-2 h-4 w-4 text-emerald-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.97 12.92A2 2 0 0 0 2 14.63v3.24a2 2 0 0 0 .97 1.71l3 1.8a2 2 0 0 0 2.06 0L12 19v-5.5l-5-3-4.03 2.42Z"
                />
                <path
                  d="m7 16.5-4.74-2.85"
                />
                <path
                  d="m7 16.5 5-3"
                />
                <path
                  d="M7 16.5v5.17"
                />
                <path
                  d="M12 13.5V19l3.97 2.38a2 2 0 0 0 2.06 0l3-1.8a2 2 0 0 0 .97-1.71v-3.24a2 2 0 0 0-.97-1.71L17 10.5l-5 3Z"
                />
                <path
                  d="m17 16.5-5-3"
                />
                <path
                  d="m17 16.5 4.74-2.85"
                />
                <path
                  d="M17 16.5v5.17"
                />
                <path
                  d="M7.97 4.42A2 2 0 0 0 7 6.13v4.37l5 3 5-3V6.13a2 2 0 0 0-.97-1.71l-3-1.8a2 2 0 0 0-2.06 0l-3 1.8Z"
                />
                <path
                  d="M12 8 7.26 5.15"
                />
                <path
                  d="m12 8 4.74-2.85"
                />
                <path
                  d="M12 13.5V8"
                />
              </svg>
               STOK BARANG JADI (FG)
            </h3>
            <p
              class="text-[10px] uppercase font-bold text-zinc-600"
            >
              Post-production inventory ledger
            </p>
          </div>
          <div
            class="p-5 space-y-4"
          >
            <div
              class="py-20 text-center opacity-20 bg-gray-50 border-2 border-dashed border-gray-200 flex flex-col items-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock h-10 w-10 mb-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 6v6l4 2"
                />
              </svg>
              <p
                class="text-[10px] font-black uppercase tracking-tight"
              >
                Awaiting QC-Done Batches
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-2xl border text-slate-900 shadow-sm lg:col-span-2 border-gray-200 bg-white"
        >
          <div
            class="flex flex-col space-y-1.5 p-5 border-b border-slate-100 text-left"
          >
            <h3
              class="text-lg font-bold text-gray-900 uppercase tracking-tighter flex items-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-truck mr-2 h-5 w-5 text-blue-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                />
                <path
                  d="M15 18H9"
                />
                <path
                  d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                />
                <circle
                  cx="17"
                  cy="18"
                  r="2"
                />
                <circle
                  cx="7"
                  cy="18"
                  r="2"
                />
              </svg>
               ACTIVE SHIPMENT STREAM
            </h3>
          </div>
          <div
            class="p-5"
          >
            <div
              class="rounded-xl border border-gray-200 overflow-hidden"
            >
              <table
                class="w-full text-left border-collapse"
              >
                <thead
                  class="dark:bg-[#111827]/90 border-b border-slate-200 dark:border-slate-800 text-[11px] leading-[16px] font-bold uppercase tracking-wider text-slate-700 dark:text-slate-300 h-[40px] bg-gray-50"
                >
                  <tr
                    class="hover:bg-slate-50/80 dark:hover:bg-slate-800/40 transition-colors h-[42px] border-gray-200"
                  >
                    <th
                      class="py-2.5 px-3.5 font-bold tracking-wider dark:text-slate-300 select-none font-sans text-[10px] uppercase text-zinc-500"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Surat Jalan
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 font-bold tracking-wider dark:text-slate-300 select-none font-sans text-[10px] uppercase text-zinc-500"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Destination
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 font-bold tracking-wider dark:text-slate-300 select-none font-sans text-[10px] uppercase text-zinc-500"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Status
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider text-slate-600 dark:text-slate-300 select-none w-[150px]"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span />
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="divide-y divide-slate-100 dark:divide-slate-800/80 text-[12px] leading-[18px]"
                />
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Direksi FulfillmentDashboard (snapshot) > renders finished goods + shipments and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Fulfillment
           
          <span
            class="text-status-action"
          >
            Hub
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          Finished Goods Distribution & Retention Trigger
        </p>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                FG Inventory
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-package"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                  />
                  <path
                    d="M12 22V12"
                  />
                  <polyline
                    points="3.29 7 12 12 20.71 7"
                  />
                  <path
                    d="m7.5 4.27 9 5.15"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending Shipments
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                1
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-truck"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                  />
                  <path
                    d="M15 18H9"
                  />
                  <path
                    d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                  />
                  <circle
                    cx="17"
                    cy="18"
                    r="2"
                  />
                  <circle
                    cx="7"
                    cy="18"
                    r="2"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Delivered Today
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                1
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-check"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="m9 12 2 2 4-4"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-8"
      >
        <div
          class="rounded-2xl border text-slate-900 shadow-sm lg:col-span-1 border-gray-200 bg-white h-fit"
        >
          <div
            class="flex flex-col space-y-1.5 p-5 border-b border-slate-100 text-left"
          >
            <h3
              class="text-sm font-black text-gray-600 uppercase tracking-[0.2em] flex items-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-boxes mr-2 h-4 w-4 text-emerald-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.97 12.92A2 2 0 0 0 2 14.63v3.24a2 2 0 0 0 .97 1.71l3 1.8a2 2 0 0 0 2.06 0L12 19v-5.5l-5-3-4.03 2.42Z"
                />
                <path
                  d="m7 16.5-4.74-2.85"
                />
                <path
                  d="m7 16.5 5-3"
                />
                <path
                  d="M7 16.5v5.17"
                />
                <path
                  d="M12 13.5V19l3.97 2.38a2 2 0 0 0 2.06 0l3-1.8a2 2 0 0 0 .97-1.71v-3.24a2 2 0 0 0-.97-1.71L17 10.5l-5 3Z"
                />
                <path
                  d="m17 16.5-5-3"
                />
                <path
                  d="m17 16.5 4.74-2.85"
                />
                <path
                  d="M17 16.5v5.17"
                />
                <path
                  d="M7.97 4.42A2 2 0 0 0 7 6.13v4.37l5 3 5-3V6.13a2 2 0 0 0-.97-1.71l-3-1.8a2 2 0 0 0-2.06 0l-3 1.8Z"
                />
                <path
                  d="M12 8 7.26 5.15"
                />
                <path
                  d="m12 8 4.74-2.85"
                />
                <path
                  d="M12 13.5V8"
                />
              </svg>
               STOK BARANG JADI (FG)
            </h3>
            <p
              class="text-[10px] uppercase font-bold text-zinc-600"
            >
              Post-production inventory ledger
            </p>
          </div>
          <div
            class="p-5 space-y-4"
          >
            <div
              class="py-20 text-center opacity-20 bg-gray-50 border-2 border-dashed border-gray-200 flex flex-col items-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock h-10 w-10 mb-2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 6v6l4 2"
                />
              </svg>
              <p
                class="text-[10px] font-black uppercase tracking-tight"
              >
                Awaiting QC-Done Batches
              </p>
            </div>
          </div>
        </div>
        <div
          class="rounded-2xl border text-slate-900 shadow-sm lg:col-span-2 border-gray-200 bg-white"
        >
          <div
            class="flex flex-col space-y-1.5 p-5 border-b border-slate-100 text-left"
          >
            <h3
              class="text-lg font-bold text-gray-900 uppercase tracking-tighter flex items-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-truck mr-2 h-5 w-5 text-blue-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
                />
                <path
                  d="M15 18H9"
                />
                <path
                  d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
                />
                <circle
                  cx="17"
                  cy="18"
                  r="2"
                />
                <circle
                  cx="7"
                  cy="18"
                  r="2"
                />
              </svg>
               ACTIVE SHIPMENT STREAM
            </h3>
          </div>
          <div
            class="p-5"
          >
            <div
              class="rounded-xl border border-gray-200 overflow-hidden"
            >
              <table
                class="w-full text-left border-collapse"
              >
                <thead
                  class="dark:bg-[#111827]/90 border-b border-slate-200 dark:border-slate-800 text-[11px] leading-[16px] font-bold uppercase tracking-wider text-slate-700 dark:text-slate-300 h-[40px] bg-gray-50"
                >
                  <tr
                    class="hover:bg-slate-50/80 dark:hover:bg-slate-800/40 transition-colors h-[42px] border-gray-200"
                  >
                    <th
                      class="py-2.5 px-3.5 font-bold tracking-wider dark:text-slate-300 select-none font-sans text-[10px] uppercase text-zinc-500"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Surat Jalan
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 font-bold tracking-wider dark:text-slate-300 select-none font-sans text-[10px] uppercase text-zinc-500"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Destination
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 font-bold tracking-wider dark:text-slate-300 select-none font-sans text-[10px] uppercase text-zinc-500"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span>
                          Status
                        </span>
                      </div>
                    </th>
                    <th
                      class="py-2.5 px-3.5 text-[11px] font-bold uppercase tracking-wider text-slate-600 dark:text-slate-300 select-none w-[150px]"
                    >
                      <div
                        class="inline-flex items-center gap-1.5 justify-start text-left"
                      >
                        <span />
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="divide-y divide-slate-100 dark:divide-slate-800/80 text-[12px] leading-[18px]"
                >
                  <tr
                    class="dark:hover:bg-slate-800/40 transition-colors h-[42px] border-gray-200 hover:bg-gray-50"
                  >
                    <td
                      class="py-2 px-3.5 dark:text-slate-200 font-sans text-xs font-black text-blue-400 uppercase"
                    >
                      SHIP-001
                    </td>
                    <td
                      class="py-2 px-3.5 dark:text-slate-200 text-xs font-bold text-gray-900 uppercase"
                    >
                      PT NEX KOSMETIK
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium"
                    >
                      <span
                        class="inline-flex items-center gap-1.5 px-3 py-1 shadow-sm text-[9px] font-black uppercase rounded-none border bg-blue-500/10 text-blue-500 border-blue-500/30"
                      >
                        PACKING
                      </span>
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium text-right"
                    >
                      <button
                        class="inline-flex items-center justify-center gap-2 font-black uppercase rounded-xl tracking-wider transition-all bg-white border text-slate-700 hover:bg-slate-50 shadow-sm hover:shadow-md px-3 text-[9px] h-7 border-gray-200"
                        type="button"
                      >
                        SHIPPED
                      </button>
                    </td>
                  </tr>
                  <tr
                    class="dark:hover:bg-slate-800/40 transition-colors h-[42px] border-gray-200 hover:bg-gray-50"
                  >
                    <td
                      class="py-2 px-3.5 dark:text-slate-200 font-sans text-xs font-black text-blue-400 uppercase"
                    >
                      SHIP-002
                    </td>
                    <td
                      class="py-2 px-3.5 dark:text-slate-200 text-xs font-bold text-gray-900 uppercase"
                    >
                      CV BEAUTY MANDIRI
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium"
                    >
                      <span
                        class="inline-flex items-center gap-1.5 px-3 py-1 shadow-sm text-[9px] font-black uppercase rounded-none border bg-emerald-500/10 text-emerald-500 border-emerald-500/30"
                      >
                        DELIVERED
                      </span>
                    </td>
                    <td
                      class="py-2 px-3.5 text-[12px] text-slate-800 dark:text-slate-200 font-medium text-right"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-circle-check h-5 w-5 text-emerald-500 ml-auto"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="m9 12 2 2 4-4"
                        />
                      </svg>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
